Fixed sizing issue on Safari browser

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -289,10 +289,12 @@ footer.footer {
 .footer .footer__logo {
     display: inherit;
     margin-left: 80px;
+    width: 200px;
 }
 
 .footer .footer__logo img {
-    width: 200px;
+    width: 100%;
+    height: 100%;
 }
 
 .footer .footer__copyright {
